--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   --primary-white-color: #ffffff;
   --secondary-text-color: #2f303a;
   --color-footer-link: rgba(255, 255, 255, 0.6);
+  --secondary-bgc: #f5f4fa;
 }
 body {
   color: var(--primery-text-color);
@@ -15,12 +16,21 @@ body {
   line-height: 1.71;
 }
 
-footer {
-  background-color: var(--secondary-text-color);
+.container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  outline: 2px solid red;
 }
+
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -33,7 +43,27 @@ footer {
   clip-path: inset(50%);
   margin: -1px;
 }
+
+/********NAV*********/
+.main-nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.site-nav {
+  display: flex;
+  align-items: center;
+  margin-left: 93px;
+}
+.contacts-nav-item:not(:last-child),
+.site-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav-link {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
   color: var(--title-text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -43,7 +73,10 @@ footer {
 .site-nav-link.current {
   color: var(--acent-color);
 }
-
+.contacts-nav {
+  display: flex;
+  margin-left: auto;
+}
 .contacts-nav-link {
   color: var(--primery-text-color);
   font-weight: 500;
@@ -82,9 +115,10 @@ footer {
 .logo-web {
   color: var(--acent-color);
 }
-/*Hero*/
+/*********Hero*******/
 .hero {
   background-color: var(--secondary-text-color);
+  text-align: center;
 }
 .hero-title {
   color: var(--primary-white-color);
@@ -93,6 +127,8 @@ footer {
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 /*button*/
@@ -105,6 +141,16 @@ footer {
   color: var(--primary-white-color);
   background-color: var(--acent-color);
   text-decoration: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+
+  text-align: center;
+  display: inline-block;
+  padding: 10px 32px;
+  min-width: 200px;
+  border-radius: 4px;
 }
 
 .button-services {
@@ -113,6 +159,13 @@ footer {
   font-size: 16px;
   line-height: 1.6;
   background: #f5f4fa;
+  letter-spacing: 0.03em;
+
+  display: inline-block;
+  padding: 6px 22px;
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 .button-services:hover,
 .button-services:focus {
@@ -129,9 +182,35 @@ footer {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-}
 
-/*feature*/
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.section.no-padding-top {
+  padding-top: 0;
+}
+.section.even:nth-child(even) {
+  background-color: var(--secondary-bgc);
+}
+/******feature******/
+.feature {
+  display: flex;
+  flex-wrap: wrap;
+}
+.feature-item:not(:last-child) {
+  margin-right: 30px;
+}
+.feature-item {
+  width: 270px;
+}
+.feature p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .feature-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -139,22 +218,30 @@ footer {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
-/*team*/
+/*******team*******/
 .team-title {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
+
 .team-text {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
-/*footer*/
+/*******footer*******/
 .list-address {
   color: var(--primary-white-color);
   text-decoration: none;
@@ -165,19 +252,31 @@ footer {
   text-decoration: none;
   font-style: normal;
 }
-/*portfolio*/
+footer {
+  background-color: var(--secondary-text-color);
+}
+
+/******portfolio******/
 .projects-name {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-top: 0;
+  margin-bottom: 4px;
 }
 .projects-link {
   text-decoration: none;
 }
+
 .projects-service {
   font-size: 16px;
   line-height: 1.9;
   color: var(--primery-text-color);
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.services {
+  margin-bottom: 50px;
 }
