--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -200,13 +200,13 @@ body {
 .feature {
   display: flex;
   flex-wrap: wrap;
-}
+  }
 .feature-item:not(:last-child) {
   margin-right: 30px;
 }
 .feature-item {
   width: 270px;
-}
+  }
 .feature p {
   margin-top: 0;
   margin-bottom: 0;
@@ -221,6 +221,15 @@ body {
 
   margin-top: 0;
   margin-bottom: 10px;
+}
+/******work********/
+
+.work-list {
+  display: flex;
+    margin: -15px;
+}
+.work-item {
+  margin: 15px;
 }
 
 /*******team*******/
@@ -241,6 +250,22 @@ body {
   margin-top: 0;
   margin-bottom: 30px;
 }
+.team {
+  display: flex;
+    }
+
+.team-item {
+  background-color: var(--primary-white-color);
+  margin-right: 30px;
+}
+
+.team-item :nth-child(4n){
+  margin-right: 0;
+}
+.team-name {
+  text-align: center;
+  margin-top: 30px;
+  }
 /*******footer*******/
 .list-address {
   color: var(--primary-white-color);
@@ -257,6 +282,10 @@ footer {
 }
 
 /******portfolio******/
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
 .projects-name {
   color: var(--title-text-color);
   font-weight: 700;
@@ -268,8 +297,18 @@ footer {
 }
 .projects-link {
   text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  }
+
+.projects-item {
+  width: 370px;
+  margin-right: 30px;
 }
 
+.projects-item:nth-child(3n) {
+  margin-right: 0;
+}
 .projects-service {
   font-size: 16px;
   line-height: 1.9;
@@ -279,4 +318,9 @@ footer {
 }
 .services {
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
 }
+
+.services-item:not(:last-child) {
+  margin-right: 8px;
