--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,7 @@ body {
 .team-name {
   text-align: center;
   margin-top: 30px;
+  margin-bottom: 30px;
   }
 /*******footer*******/
 .list-address {
